LC #1008 Second solution; README